welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
		sol = true;
                    ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
		else {recule()}
                            ^SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
		else {recule()}
                            ^