welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	var sol: Boolean = false;
	if (!estFaceMur()) {
		avance()
		if (getCouleurSol() == Color.green) {
		sol = true;
	}
		else {recule()}
		}
		else {recule()}
}